--- a/CronParser/pom.xml
+++ b/CronParser/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
+    </properties>
+
     <!-- Add more project information here -->
 
 </project>
